--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;" aria-live="polite">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?94903"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?80176"></script>
 	</div>
 
 	<!-- end copy -->
@@ -55,10 +55,10 @@
 		<div>00:00:00:00</div>
 		<div>Stop</div>
 		<div>Continue</div>
-		<div>Start Time
+		<div>Location Reached
 </div>
 		<div>0</div>
-		<div>Timer</div>
+		<div>GPS Timer</div>
 		<div>Continue Time</div>
 		<div>00:00:00:01</div>
 		<div>50</div>
@@ -98,6 +98,7 @@
 		<div>00:00:00:35</div>
 		<div>00:00:00:36</div>
 		<div>00:00:00:37</div>
+		<div>50</div>
 		<div>00:00:00:38</div>
 		<div>00:00:00:39</div>
 		<div>00:00:00:40</div>
@@ -238,6 +239,7 @@
 </div>
 		<div>00:00:01:51
 </div>
+		<div>150</div>
 		<div>00:00:01:52
 </div>
 		<div>00:00:01:53
@@ -256,6 +258,7 @@
 </div>
 		<div>00:00:02:00
 </div>
+		<div>200</div>
 		<div>00:00:02:01
 </div>
 		<div>00:00:02:02
