--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;" aria-live="polite">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?80176"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?17631"></script>
 	</div>
 
 	<!-- end copy -->
@@ -379,6 +379,7 @@
 </div>
 		<div>00:00:03:00
 </div>
+		<div>App Settings</div>
 
 	</div>
 
